image squashed on mobile - content img fix

--- a/frontend/app/styles/components/_components/_content.scss
+++ b/frontend/app/styles/components/_components/_content.scss
@@ -63,4 +63,8 @@
     blockquote {
         @extend .blockquote;
     }
+
+    img:not([src*=".svg"]) {
+        height: auto;
+    }
 }
